--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {},
   "scripts": {
